Bug 1278027 - Reuse some codes of MediaEncoder::NotifyQueuedTrackChanges in MediaEncoder::NotifyQueuedAudioData. r=jesup, a=lizzard

MozReview-Commit-ID: JBRdxD1wA4c